--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body-class: home
 
 
 
-      <section id="context" class="u__vspacing s__light">
+      <section id="context" class="u__vspacing s__gray">
         <article class="container">
 
             <!-- <h2 class="h4 text-center text-uppercase font-weight-bold text-blue">Section Header</h2> -->
