--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Reopening RI | Rhode Island's Phased Covid-19 Plan
-nav-title: Reopening RI
+title: Rhode Island's Phased Covid-19 Plan
+nav-title: Home
 permalink: /
 body-class: home
 ---
