--- a/index.html
+++ b/index.html
@@ -188,8 +188,12 @@ body-class: home
 
           <div class="row">
 
-            <div class="col-md-6 col-lg-7 pt-4 mt-2">
-              <div class="pr-4">
+            <div class="col-md-5 col-lg-5 pt-2 pb-2">
+              <img src="{{ '/' | relative_url }}assets/img/phase-1-dock.jpg" class="mw-100 pb-2" alt="Image of a dock with a beautiful sunset" aria-hidden="true">
+            </div>
+
+            <div class="col-md-6 col-lg-7 pt-4 mt-0">
+              <div class="pl-4">
 
                 <h2 class="h2">Phase I: Testing the water</h2>
                 <p class="lead">In the first phase, we can look forward to seeing friends and family again.</p>
@@ -202,9 +206,7 @@ body-class: home
               </div>
             </div>
 
-            <div class="col-md-5 col-lg-5">
-              <img src="{{ '/' | relative_url }}assets/img/phase-1-dock.jpg" class="mw-100 pb-2" alt="Image of a dock with a beautiful sunset" aria-hidden="true">
-            </div>
+
 
           </div>
 
@@ -218,12 +220,10 @@ body-class: home
           <div class="row">
 
 
-            <div class="col-md-5 col-lg-5 pt-2">
-              <img src="{{ '/' | relative_url }}assets/img/phase-2-sail.jpg" class="mw-100 pb-2" alt="Image of a sailboat beginning to sail" aria-hidden="true">
-            </div>
 
-            <div class="col-md-6 col-lg-7 pt-0 mt-0">
-              <div class="pl-4">
+
+            <div class="col-md-6 col-lg-7 pt-4 mt-2">
+              <div class="pr-4">
 
                 <h2 class="h2">Phase II: Navigating our way</h2>
                 <p class="lead">In the second phase, we can look forward to more businesses reopening and restrictions being further relaxed.</p>
@@ -239,7 +239,9 @@ body-class: home
               </div>
             </div>
 
-
+            <div class="col-md-5 col-lg-5 pt-4">
+              <img src="{{ '/' | relative_url }}assets/img/phase-2-sail.jpg" class="mw-100 pb-2" alt="Image of a sailboat beginning to sail" aria-hidden="true">
+            </div>
 
           </div>
 
@@ -252,8 +254,12 @@ body-class: home
 
           <div class="row">
 
-            <div class="col-md-6 col-lg-7 pt-4 mt-2">
-              <div class="pr-4">
+            <div class="col-md-5 col-lg-5 pt-4 pb-4">
+              <img src="{{ '/' | relative_url }}assets/img/phase-3-sail.jpg" class="mw-100 pb-2" alt="Image of a dock with a beautiful sunset" aria-hidden="true">
+            </div>
+
+            <div class="col-md-6 col-lg-7 pt-4 mt-0">
+              <div class="pl-4">
 
                 <h2 class="h2">Phase III: Picking up speed</h2>
                 <p class="lead">In the third phase, we’ll build on our learning from the first two phases.</p>
@@ -268,9 +274,7 @@ body-class: home
               </div>
             </div>
 
-            <div class="col-md-5 col-lg-5 pt-4">
-              <img src="{{ '/' | relative_url }}assets/img/phase-3-sail.jpg" class="mw-100 pb-2" alt="Image of a dock with a beautiful sunset" aria-hidden="true">
-            </div>
+
 
           </div>
 
@@ -286,12 +290,9 @@ body-class: home
           <div class="row">
 
 
-            <div class="col-md-5 col-lg-5 pt-2">
-              <img src="{{ '/' | relative_url }}assets/img/beyond-harbor.jpg" class="mw-100 pb-2" alt="Image of a sunset over a harbor" aria-hidden="true">
-            </div>
 
-            <div class="col-md-6 col-lg-7 pt-0 mt-0">
-              <div class="pl-4">
+            <div class="col-md-6 col-lg-7 pt-4 mt-2">
+              <div class="pr-4">
 
                 <h2 class="h2">Beyond Phase III</h2>
                 <p class="lead">There is more to look forward to on the other side of the third phase.</p>
@@ -300,6 +301,11 @@ body-class: home
                 <p>Along the way, we’ll innovate as we challenge ourselves to find new and better ways of operating and living.</p>
 
               </div>
+            </div>
+
+
+            <div class="col-md-5 col-lg-5 pt-4">
+              <img src="{{ '/' | relative_url }}assets/img/beyond-harbor.jpg" class="mw-100 pb-2" alt="Image of a sunset over a harbor" aria-hidden="true">
             </div>
 
 
